--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/uuid": "^9.0.1",
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -34,6 +35,7 @@
     "@tsconfig/node16": "^1.0.3",
     "@tsconfig/node18": "^1.0.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
